# yra

./: .dockerignore  .env.example  .gitattributes  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: config.py  logging.py
app/db/: init_db.py  models.py  session.py
app/repositories/: claim_repository.py  law_repository.py
app/schemas/: laws.py  pipeline.py  requests.py  responses.py
app/services/: claim_evaluator.py  claim_generator.py  claim_validator.py  fact_extractor.py  law_retriever.py  litellm_client.py  pipeline.py  prompt_loader.py
docs/: PRD.md
prompts/: claim_evaluator.md  claim_generator.md  claim_validator.md  error_explainer.md  fact_extractor.md  law_query_builder.md
